# summaryService

./: .env.example  .gitlab-ci.yml  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
config/: __init__.py  logging.py
src/: __init__.py
src/domain/: __init__.py  interfaces.py  models.py
src/infrastructure/: __init__.py  llm_service.py  repository.py
src/use_cases/: __init__.py  summary_use_case.py
src/web/: __init__.py  api.py  models.py
tests/integration/: test_api.py
tests/unit/: test_domain_models.py  test_infrastructure.py  test_summary_use_case.py
